# NewtypeFunc

./: Newtypefunc.cabal  Newtypefunc.hs  README.md  Specs.hs
