name:                Newtypefunc
version:             0.1.0.0
license-file:        LICENSE
author:              Patrick GIRY   
maintainer:          patrickgiry@gmail.com
category:            Text
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:     Newtypefunc 
  ghc-options:         -Wall -fwarn-tabs
  build-depends:       base >= 4.7 && < 5
                     , hspec
  hs-source-dirs:      .
  default-language:    Haskell2010

